--- a/pan/build.gradle
+++ b/pan/build.gradle
@@ -15,6 +15,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'mysql:mysql-connector-java'
+	/* Mybatis */
+	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.1'
+	compile group: 'org.mybatis', name: 'mybatis', version: '3.5.1'
 }
 
 test {
